# snow-weather

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/: lambda_function.py
src/api/: weather.py
tf/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tf/modules/eventbridge/: main.tf  outputs.tf  variables.tf
tf/modules/lambda/: main.tf  outputs.tf  variables.tf
